--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,78 +1,71 @@
-version: '3.8'
-
 services:
-  # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
-    container_name: node_api_postgres
-    restart: unless-stopped
+    container_name: postgres
     environment:
-      POSTGRES_DB: node_api_db
+      POSTGRES_DB: test_db
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
-      - node_api_network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - network
 
-  # Redis Cache
-  redis:
-    image: redis:7-alpine
-    container_name: node_api_redis
-    restart: unless-stopped
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - node_api_network
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  # Node.js API
-  api:
+  backend:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: node_api_app
-    restart: unless-stopped
+    container_name: backend
     ports:
-      - "3000:3000"
+      - "8080:3000"
     environment:
-      NODE_ENV: development
-      PORT: 3000
-      DATABASE_URL: postgresql://postgres:postgres123@postgres:5432/node_api_db
-      REDIS_URL: redis://redis:6379
+      - NODE_ENV=development
+      - DATABASE_HOST=postgres
+      - DATABASE_PORT=5432
+      - DATABASE_NAME=test_db
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=password
     depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+      - postgres
     networks:
-      - node_api_network
+      - network
     volumes:
-      - ./src:/app/src
-      - ./package.json:/app/package.json
-      - ./yarn.lock:/app/yarn.lock
-      - ./tsconfig.json:/app/tsconfig.json
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_LISTEN_PORT: 80
+      PGADMIN_SERVER_JSON_FILE: /pgadmin4/servers.json
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    networks:
+      - network
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ./pgadmin-servers.json:/pgadmin4/servers.json:ro
+    command: >
+      sh -c "
+        echo 'Waiting for postgres to be ready...' &&
+        while ! nc -z postgres 5432; do sleep 1; done &&
+        echo 'Postgres is ready!' &&
+        /entrypoint.sh
+      "
 
 volumes:
   postgres_data:
-    driver: local
-  redis_data:
-    driver: local
+  pgadmin_data:
 
 networks:
-  node_api_network:
+  network:
     driver: bridge 
