--- a/monitoring/simple-prometheus.yml
+++ b/monitoring/simple-prometheus.yml
@@ -8,9 +8,9 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  # Backend API metrics
-  - job_name: 'backend-api'
+  # OpenTelemetry Collector metrics endpoint
+  - job_name: 'otelcol-metrics'
     static_configs:
-      - targets: ['backend:8080']
+      - targets: ['otel-collector:8889']
     metrics_path: '/metrics'
     scrape_interval: 5s
