--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,14 @@
     "prom-client": "^15.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/sdk-node": "^0.53.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.53.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.53.0",
+    "@opentelemetry/resources": "^1.9.0",
+    "@opentelemetry/semantic-conventions": "^1.23.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.53.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
