--- a/monitoring/simple-prometheus.yml
+++ b/monitoring/simple-prometheus.yml
@@ -14,3 +14,8 @@ scrape_configs:
       - targets: ['otel-collector:8889']
     metrics_path: '/metrics'
     scrape_interval: 5s
+
+  - job_name: 'postgres-exporter'
+    static_configs:
+      - targets: ['postgres-exporter:9187']
+    scrape_interval: 15s
